native/include/jyppx/cuda/runtime.h

JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_get_runtime_version(int32_t* out_version);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_get_driver_version(int32_t* out_version);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_get_device_count(int32_t* out_device_count);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_get_device_info(int32_t ordinal, JYPPX_CudaDeviceInfo* out_info);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_get_current_device(int32_t* out_device);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_get_device_flags(uint32_t* out_flags);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_get_memory_info(JYPPX_CudaMemoryInfo* out_info);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_get_last_error(int32_t* out_error_code);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_get_error_name(int32_t error_code, char* output_buffer, size_t output_buffer_size, size_t* out_required_size);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_get_error_string(int32_t error_code, char* output_buffer, size_t output_buffer_size, size_t* out_required_size);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_func_get_attributes(const void* function, JYPPX_CudaFuncAttributes* out_attributes);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_func_get_name(const void* function, char* output_buffer, size_t output_buffer_size, size_t* out_required_size);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_func_get_param_count(const void* function, size_t* out_param_count);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_func_get_param_info(const void* function, size_t parameter_index, size_t* out_parameter_offset, size_t* out_parameter_size);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_func_set_attribute(const void* function, int32_t attribute, int32_t value);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_func_set_cache_config(const void* function, int32_t cache_config);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_func_set_shared_mem_config(const void* function, int32_t config);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_add_conditional_node_safe(JYPPX_CudaGraph* graph, JYPPX_CudaGraphConditionalHandle* handle, uint32_t node_type, uint32_t body_count, uintptr_t dependency_node, JYPPX_CudaGraphConditionalNode** out_node);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_add_child_graph_node_safe(JYPPX_CudaGraph* graph, JYPPX_CudaGraph* child_graph, uintptr_t* out_node);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_add_child_graph_node_after_safe(JYPPX_CudaGraph* graph, uintptr_t dependency_node, JYPPX_CudaGraph* child_graph, uintptr_t* out_node);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_free_array(JYPPX_CudaArray* array);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_array_get_channel_desc(JYPPX_CudaArray* array, JYPPX_CudaChannelFormatDesc* out_descriptor);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_free_mipmapped_array(JYPPX_CudaMipmappedArray* array);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_get_mipmapped_array_level_info(JYPPX_CudaMipmappedArray* array, uint32_t level, JYPPX_CudaArrayInfo* out_info);
/* END CUDA TWENTY-FOURTH BATCH GENERATED DECLARATIONS */

/* BEGIN CUDA TWENTY-FIFTH BATCH GRAPH TOPOLOGY DECLARATIONS */
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_add_empty_node_safe(JYPPX_CudaGraph* graph, uintptr_t* out_node);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_add_empty_node_after_safe(JYPPX_CudaGraph* graph, uintptr_t dependency_node, uintptr_t* out_node);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_add_dependency_safe(JYPPX_CudaGraph* graph, uintptr_t from_node, uintptr_t to_node);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_graph_add_dependency_v2_safe(JYPPX_CudaGraph* graph, uintptr_t from_node, uintptr_t to_node, const JYPPX_CudaGraphEdgeData* edge_data);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_surface_object_get_resource_snapshot_safe(JYPPX_CudaSurfaceObject* surface, JYPPX_CudaResourceDescriptorSnapshot* out_snapshot);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_texture_object_get_resource_snapshot_safe(JYPPX_CudaTextureObject* texture, JYPPX_CudaResourceDescriptorSnapshot* out_snapshot);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_texture_object_get_descriptor_safe(JYPPX_CudaTextureObject* texture, JYPPX_CudaTextureDescriptor* out_descriptor);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_texture_object_get_descriptor_v2_safe(JYPPX_CudaTextureObject* texture, JYPPX_CudaTextureDescriptor* out_descriptor);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_texture_object_get_resource_view_snapshot_safe(JYPPX_CudaTextureObject* texture, JYPPX_CudaTextureResourceViewSnapshot* out_snapshot);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_get_surface_object_resource_desc_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_get_texture_object_resource_desc_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_get_texture_object_resource_view_desc_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_get_texture_object_texture_desc_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_get_texture_object_texture_desc_v2_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_external_memory_get_mapped_buffer_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_external_memory_get_mapped_mipmapped_array_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_get_driver_entry_point_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_get_driver_entry_point_by_version_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_get_export_table_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_get_func_by_symbol_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_get_kernel_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_get_symbol_address_deferred(void);
JYPPX_C_API(JYPPX_StatusCode) jyppx_cuda_get_symbol_size_deferred(void);