src/JYPPX.CudaSharp/Internal/Interop/Generated/GeneratedCudaManifestNativeMethods.g.cs


    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_external_memory_get_mapped_buffer_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_external_memory_get_mapped_mipmapped_array_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_free_array(IntPtr array);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_free_mipmapped_array(IntPtr array);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_func_get_attributes(IntPtr function, out NativeCudaFuncAttributes out_attributes);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_func_get_name(IntPtr function, byte[] output_buffer, UIntPtr output_buffer_size, out UIntPtr out_required_size);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_func_get_param_count(IntPtr function, out UIntPtr out_param_count);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_func_get_param_info(IntPtr function, UIntPtr parameter_index, out UIntPtr out_parameter_offset, out UIntPtr out_parameter_size);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_func_set_attribute(IntPtr function, int attribute, int value);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_func_set_cache_config(IntPtr function, int cache_config);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_func_set_shared_mem_config(IntPtr function, int config);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_array_get_channel_desc(SafeCudaArrayHandle array, out NativeCudaChannelFormatDesc out_descriptor);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_get_current_device(out int out_device);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_get_device_count(out int out_device_count);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_get_device_flags(out uint out_flags);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_get_device_info(int ordinal, out NativeCudaDeviceInfo out_info);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_get_driver_entry_point_by_version_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_get_driver_entry_point_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_get_driver_version(out int out_version);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_get_error_name(int error_code, byte[] output_buffer, UIntPtr output_buffer_size, out UIntPtr out_required_size);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_get_error_string(int error_code, byte[] output_buffer, UIntPtr output_buffer_size, out UIntPtr out_required_size);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_get_export_table_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_get_func_by_symbol_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_get_kernel_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_get_last_error(out int out_error_code);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_get_memory_info(out NativeCudaMemoryInfo out_info);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_get_mipmapped_array_level_info(SafeCudaMipmappedArrayHandle array, uint level, out NativeCudaArrayInfo out_info);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_get_runtime_version(out int out_version);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_surface_object_get_resource_snapshot_safe(SafeCudaSurfaceObjectHandle surface, out NativeCudaResourceDescriptorSnapshot out_snapshot);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_get_surface_object_resource_desc_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_get_symbol_address_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_get_symbol_size_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_texture_object_get_resource_snapshot_safe(SafeCudaTextureObjectHandle texture, out NativeCudaResourceDescriptorSnapshot out_snapshot);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_get_texture_object_resource_desc_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_texture_object_get_resource_view_snapshot_safe(SafeCudaTextureObjectHandle texture, out NativeCudaTextureResourceViewSnapshot out_snapshot);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_get_texture_object_resource_view_desc_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_texture_object_get_descriptor_safe(SafeCudaTextureObjectHandle texture, out NativeCudaTextureDescriptor out_descriptor);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_get_texture_object_texture_desc_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_texture_object_get_descriptor_v2_safe(SafeCudaTextureObjectHandle texture, out NativeCudaTextureDescriptor out_descriptor);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_get_texture_object_texture_desc_v2_deferred();

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_add_child_graph_node_after_safe(SafeCudaGraphHandle graph, UIntPtr dependency_node, SafeCudaGraphHandle child_graph, out UIntPtr out_node);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_add_child_graph_node_safe(SafeCudaGraphHandle graph, SafeCudaGraphHandle child_graph, out UIntPtr out_node);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_add_conditional_node_safe(SafeCudaGraphHandle graph, SafeCudaGraphConditionalHandleHandle handle, uint node_type, uint body_count, UIntPtr dependency_node, out SafeCudaGraphConditionalNodeHandle out_node);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_add_dependency_safe(SafeCudaGraphHandle graph, UIntPtr from_node, UIntPtr to_node);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_add_dependency_v2_safe(SafeCudaGraphHandle graph, UIntPtr from_node, UIntPtr to_node, in NativeCudaGraphEdgeData edge_data);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_add_empty_node_after_safe(SafeCudaGraphHandle graph, UIntPtr dependency_node, out UIntPtr out_node);

    [DllImport(BridgeConstants.NativeBridgeLibraryName, CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
    internal static extern BridgeStatusCode jyppx_cuda_graph_add_empty_node_safe(SafeCudaGraphHandle graph, out UIntPtr out_node);
